[tool.poetry]
name = "ras-scripts"
version = "0.1.0"
description = ""
authors = ["Eszter, Gábor <mrxaxen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
wget = "^3.2"
pyinstaller = "^6.12.0"
gdown = "^5.2.0"
py7zr = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
